--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,21 @@
 {
-  "manifest_version": 2,
+    "manifest_version": 2,
 
-  "name": "Getting started example",
-  "description": "This extension shows a Google Image search result for the current page",
-  "version": "1.0",
+    "name": "Getting started example",
+    "description": "This extension shows a Google Image search result for the current page",
+    "version": "1.0",
 
-  "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html",
-    "default_title": "Click here!"
-  },
-  "permissions": [
-    "https://www.fitbit.com/"
-  ]
+    "browser_action": {
+        "default_icon": "icon.png",
+        "default_popup": "popup.html",
+        "default_title": "Click here!"
+    },
+
+    "permissions": [],
+
+    "content_scripts": [{
+        "matches": ["https://www.fitbit.com/activities"],
+        "js": ["inject.js"],
+        "all_frames": true
+    }]
 }
